--- a/.github/workflows/kafka-connect-ci.yml
+++ b/.github/workflows/kafka-connect-ci.yml
@@ -98,6 +98,6 @@ jobs:
     - uses: actions/upload-artifact@v4
       if: failure()
       with:
-        name: test logs
+        name: ${{ runner.os }}-${{ matrix.jvm }}-test-logs
         path: |
           **/build/testlogs
