added report capture

--- a/.github/workflows/kafka-connect-ci.yml
+++ b/.github/workflows/kafka-connect-ci.yml
@@ -101,3 +101,9 @@ jobs:
         name: ${{ runner.os }}-${{ matrix.jvm }}-test-logs
         path: |
           **/build/testlogs
+    - uses: actions/upload-artifact@v4
+      if: failure()
+      with:
+        name: ${{ runner.os }}-${{ matrix.jvm }}-test-reports
+        path: |
+          **/build/reports/tests/**
